src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

body {
    font-family: 'Ubuntu', sans-serif;
    --beige: #e2d8cc;
    --beige-shadow: #9a958d;
    --sharp-orange: #ff6054;
    --purple-accent: #261933;
    --slate: #6a6e76;
    --font-dark: #2f2620;
    --font-silver: #dadada;
    --accent-gray: #aeadb0;
    background-color: var(--accent-gray);
    margin: 0 30px;
    padding: 0;
    min-width: 300px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1, nav, main, footer {
    max-width: 1200px;
}

h1 {
    font-family: 'Bebas Neue', sans-serif;
    font-size: 5rem;
    color: var(--font-dark);
    width: 100%;
    text-align: center;
    padding: 70px 0;
    background-image: url("./img/sunset.png");
    background-size: cover;
    background-position: 50% 50%;
    margin: 0;
}

h2 {
    font-size: 2.5rem;
    font-weight: 400;
    margin: 20px 0;
}

nav {
    background-color: var(--sharp-orange);
    font-size: 2rem;
    font-weight: 400;
    color: var(--font-silver);
    width: 100%;
    padding: 20px 0;
}

    nav ul {
        display: flex;
        justify-content: center;
        margin: 0;
        padding: 0;
        list-style: none;
    }

    li {
        margin: 0 20px;
        padding: 10px;
    }

    li:hover {
        background-color: var(--purple-accent);
        border-radius: 5px;
        transform: scale(1.1);
        box-shadow: 2px 2px 2px var(--font-dark);
    }

.about-btns {
    margin: 15px;
    bottom: 0;
    right: 0;
    position: absolute;
}

    .contact-icon {
        padding-right: 10px;
        height: 2rem;
    }

    .contact-icon:hover {
        transform: scale(1.25);
    }

.icon {
    padding-right: 10px;
    height: 1.5rem;
}

    .icon:hover {
        transform: scale(1.25);
    }

main {
    background-color: var(--beige);
    width: 100%;
    padding-bottom: 30px;
}

    .about-me {
        display: flex;
        align-items: center;
    }

        header {
            position: relative;
            padding: 2.5vh 4vw;
            display: flex;
            align-items: center;
            justify-content: center;
            background: linear-gradient(171.5deg, var(--purple-accent) 65.5%, var(--beige-shadow) 66%, var(--beige) 67%);
        }

        .about-me-img-cont {
            position: relative;
            display: flex;
            justify-content: center;
        }

        .img-name {
            position: absolute;
            bottom: 0;
            padding: 5px 0;
            font-size: max(2.25vw, 2.75rem);
            font-weight: 400;
            color: var(--font-silver);
        }

        .about-me-card {
            background-color: var(--slate);
            color: var(--font-silver);
            min-height: 300px;
            padding: 0 20px;
            position: relative;
            box-shadow: 0 5px 5px var(--beige-shadow);
        }

            .about-me-text {
                line-height: 1.5rem;
            }

    .project, .project-img {
        width: 400px;
    }

    .projects-cont {
        display: grid;
        grid-template-columns: repeat(auto-fill, 450px);
        justify-content: center;
        justify-items: center;
        gap: 40px 20px;
        margin: 30px 0;
    }

        .project {
            background-color: var(--slate);
            border-bottom: 5px solid var(--sharp-orange);
            border-radius: 3px;
            color: var(--font-silver);
            box-shadow: 5px 5px 5px var(--beige-shadow);
            position: relative;
        }

        .project-img {
            padding: 0;
            height: 350px;
            border-top-left-radius: 3px;
            border-top-right-radius: 3px;
        }

        .project-sub {
            display: flex;
            flex-direction: column;
            position: relative;
        }

        .project-name {
            margin: 10px;
            font-size: 1.5rem;
            font-weight: 400;
        }

        .project-text {
            margin: 10px 10px;
            font-size: 1rem;
            background: var(--silver);
        }

        .project-btns {
            margin: 10px 0;
            top: 0;
            right: 0;
            position: absolute;
        }

footer {
    display: flex;
    justify-content: center;
    background-color: var(--purple-accent);
    font-size: 1rem;
    color: var(--font-silver);
    width: 100%;
    padding: 20px 0;
}

    .contact-cont {
        display: flex;
        flex-direction: column;
        position: relative;
        margin: 0 50px;
        max-width: 450px;
    }

        .contact-card {
            display: flex;
            align-items: center;
            line-height: 2rem;
        }

        .contact-btns {
            margin: 10px 0;
        }

    #contact-img {
        margin: 0 -10px;
        max-width: 100%;
    }

@media (max-width: 1000px) {
    body {
        margin: 0 10px;
    }

    h1 {
        font-size: 4.5rem;
    }

    nav {
        font-size: 1.5rem;
    }

    li {
        margin: 0 10px;
    }

    .about-me {
        display: block;
    }

    .about-me-img-cont {
        float: left;
        margin: 0 -50px 0px 0px;
        width: 450px;
        height: auto;
        left: 11vw;
        z-index: 1;
    }

    .img-name {
        text-wrap: nowrap;
        position: relative;
        left: -5vw;
    }

    .about-me-card {
        padding: 40px;
        margin: 60px 20px 30px 60px;
    }

    footer {
        flex-wrap: wrap;
    }

    #contact-img {
        margin: 0;
        max-width: 100%;
    }
}

@media (max-width: 700px) {
    body {
        margin: 0;
    }

    h1 {
        font-size: 3.5rem;
    }

    nav {
        font-size: 1.25rem;
    }

    li {
        margin: 0;
        padding: 5px;
    }    

    li:hover {
        border-radius: 4px;
        transform: scale(1);
        box-shadow: 1px 1px 1px var(--font-dark);
    }

    main {
        margin: 0;
        justify-content: center;
    }

    .about-me {
        display:flex;
        justify-content: center;
        flex-wrap: wrap;
        margin: 0;
    }

    .about-me-img-cont {
        width: auto;
        margin: 0;
        left: 0;
    }

    .img-name {
        left: unset;
        position: absolute;
        bottom: 0;
    }

    .about-me-card {
        margin: 0;
        padding: 0 20px;
    }

    .about-me-img-cont picture {
        height: 340px;
    }

    #contact-img {
        margin: 0;
        max-width: 100%;
    }
}

@media (max-width: 400px) {
    .about-me-img-cont {
        max-height: 277px;
    }
}

